WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167664
Apple Pay button does nothing on nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=167664
Summary
Apple Pay button does nothing on nytimes.com
Anders Carlsson
Reported
2017-01-31 13:56:10 PST
Apple Pay button does nothing on nytimes.com
Attachments
Patch
(7.41 KB, patch)
2017-01-31 13:58 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-01-31 13:58:45 PST
Created
attachment 300255
[details]
Patch
Anders Carlsson
Comment 2
2017-01-31 14:05:29 PST
Committed
r211446
: <
http://trac.webkit.org/changeset/211446
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug